fix: scrollbar

--- a/src/components/secondary-state-modal/_secondary-state-modal.scss
+++ b/src/components/secondary-state-modal/_secondary-state-modal.scss
@@ -5,22 +5,18 @@
   .modal-container {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: auto;
     justify-content: center;
-
+    min-height: 100%;
+    overflow-y: auto;
     .modal-inner {
       height: auto;
       margin: 0 1rem;
-      max-height: 700px;
       overflow: hidden;
       padding: 0;
       width: auto;
       @include respond-to(tablet) {
         margin: 0 1.25rem;
-        max-height: 612px;
-      }
-      @include respond-to(desktop) {
-        max-height: 688px;
       }
       .-close--small {
         padding: 0.75rem;
@@ -33,13 +29,12 @@
         }
       }
       .modal-content {
-        overflow-y: auto;
         padding: 1rem;
         @include respond-to(tablet) {
-          padding: 30px 1.25rem 1.25rem;
+          padding: 30px 1.25rem 1.25rem 1.25rem;
         }
         @include respond-to(desktop) {
-          padding: 2.25rem 1.5rem 1.5rem;
+          padding: 2.25rem 1.5rem 1.5rem 1.5rem;
         }
       }
       .modal-content-body {
@@ -138,7 +133,7 @@
         margin: 0 !important;
       }
     }
-
+    
     @include respond-to(mobile) {
       .modal-content-body .columns-4,
       .modal-content-body .columns-6 {
